styles/components/header.scss
.header-cont {
    overflow-x: hidden;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    max-width: 1600px;
    width: 100%;
    height: 100vh;
    margin: 0 48px;
    position: relative;
    top: -60px;
    // z-index: -1;
    // header and image header ============================

    .info-cont, .img-info-cont {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        align-items: center;
        position: absolute;

        max-width: 1400px;
        width: 100%;
        height: 100%;
        padding: 0 48px;

        div div { 
            margin-top: 24px; 
            position: relative;
            p {
                z-index: 100;
                // filter: none;
            }
            div {
                position: absolute;
                margin-top: 0;
                top: -20px;
                left: -20px;
                z-index: -1;
                width: 100%;
                height: 100%;
                background: rgba(255, 252, 250, 0.4);
                filter: blur(16px);
                border-radius: 100px;
                padding: 24px;

            }
        }
    }
    .img-info-cont {
        column-gap: 175px;
    }

    .info-cont div:first-child { width: 60%; }
    .img-info-cont div:first-child { width: 50%; }

}

.profile-img-cont {
    position: relative;
    width: 360px;
    height: 430px;
    border: 1px solid $darkbrown;
    border-radius: 4px;
    img {
        object-fit: cover;
        position: absolute;
        top: 12px;
        left: -12px;
        width: 360px;
        height: 430px;
        border-radius: 4px;
    }
}
// work header ================================
.project-cont {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    align-items: center;
    position: absolute;

    width: 100%;
    max-width: 1200px;
    height: 100%;
    padding: 0 48px;
    
    div:first-of-type {
        width: 80%;
        p {
            margin: 4px 0;
        }
        .attribution {
            color: $detailText;
            font-style: italic;
        }
    }
    .project-preview {
        width: 50%;
        text-align: center;
        img {
            height: 500px;
        }
    }
}
// end of work header ========================
.down-arrow {
    position: absolute;
    bottom: 48px;
    width: 20px;
    transition: all ease-in-out;
}

@media screen and (max-width: $lg) {
    .header-cont .img-info-cont {
        flex-direction: column-reverse;
        justify-content: center;
    }

    .header-cont .info-cont div:first-child, 
    .header-cont .img-info-cont div:first-child { 
        width: 80%; 
    }

    .profile-img-cont {
        width: 300px;
        height: 300px;
        margin-bottom: 24px;

        img {
            width: 300px;
            height: 300px;
        }
    }
    // work header ================================
    .project-cont {
        max-width: 900px;
        
        div:first-of-type {
            width: 100%;
        }
    }
}

@media screen and (max-width: $md) {
    .header-cont .img-info-cont { flex-direction: column-reverse; }
    .header-cont .img-info-cont div:first-child { width: 100%; }

    .profile-img-cont {
        width: 250px;
        height: 250px;
        img {
            width: 250px;
            height: 250px;
        }
    }
    // work header ================================
    .project-cont {
        padding: 0 24px;
        
        div:first-of-type {
            width: 100%;
        }
        .project-preview img {
            height: 350px;
        }
    }
}

@media screen and (max-width: $sm) {
    .header-cont .info-cont, .header-cont .img-info-cont {
        padding: 0 24px;
    }
    .header-cont .bg-deco { width: 120vw;}
    .header-cont .info-cont div:first-child { width: 100%; }
    .desktop-deco { display: none; }
    .down-arrow { width: 16px; }
    
    // work header ================================
    .project-cont {
        div:first-of-type .attribution {
            display: none;
        }
        .project-preview {
            display: none;
        }
    }
}

